<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_orderchecklayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/app_toolbar_layout" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_order_summary_parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:weightSum="17">

                <TextView
                    android:id="@+id/txt_contact_us"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="0.8"
                    android:text="@string/contactus"
                    android:textColor="@color/App_Gray"
                    android:textSize="@dimen/activity_medium_textSize"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_contactus_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/edt_bck"
                    android:hint="Name"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/App_Grey"
                    android:textSize="@dimen/activity_fifteen_textSize" />


                <EditText
                    android:id="@+id/edt_contactus_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/edt_bck"
                    android:hint="Email"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/App_Grey"
                    android:textSize="@dimen/activity_fifteen_textSize" />

                <EditText
                    android:id="@+id/edt_contactus_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/edt_bck"
                    android:hint="Mobile Number"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/App_Grey"
                    android:textSize="@dimen/activity_fifteen_textSize" />


                <EditText
                    android:id="@+id/edt_contactus_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/edt_bck"
                    android:gravity="start"
                    android:hint="Message"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/App_Grey"
                    android:textSize="@dimen/activity_fifteen_textSize" />

                <Button
                    android:id="@+id/btn_contactus_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="@color/App_Orange"
                    android:text="Send"
                    android:textColor="@color/white"
                    android:textSize="@dimen/activity_small_textSize"
                    android:textStyle="bold" />
                <!--    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="1dp"
                        android:background="#546F7A">
                    </View>-->

                <LinearLayout
                    android:id="@+id/ll_grandtotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_grandtotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/address_contact"
                        android:textColor="@color/Black"
                        android:textSize="@dimen/activity_small_textSize" />

                    <!--  <ImageView
                          android:id="@+id/tv_grandTotalAmt"
                          android:layout_width="wrap_content"
                          android:layout_height="match_parent"
                          android:src="@mipmap/ic_launcher"
                          android:layout_gravity="center"
                          android:textSize="@dimen/activity_fifteen_textSize"
                          android:layout_margin="10dp"
                          android:gravity="end"/>-->

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="1dp"
                    android:background="#546F7A"></View>

                <LinearLayout
                    android:id="@+id/ll_call"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/contact_general"
                        android:textColor="@color/Black"
                        android:textSize="@dimen/activity_small_textSize" />
                    <!-- <ImageView
                         android:id="@+id/msg"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:src="@mipmap/ic_launcher"
                         android:layout_gravity="center"
                         android:textSize="@dimen/activity_fifteen_textSize"
                         android:layout_margin="10dp"
                         android:gravity="end"/>-->
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="1dp"
                    android:background="#546F7A"></View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/contact_callus1"
                            android:textColor="@color/Black"
                            android:textSize="@dimen/activity_small_textSize" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/contact_callus2"
                            android:textColor="@color/Black"
                            android:textSize="@dimen/activity_small_textSize" />
                    </LinearLayout>

                    <!-- <ImageView
                         android:id="@+id/call"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:src="@mipmap/ic_launcher"
                         android:layout_gravity="center"
                         android:textSize="@dimen/activity_fifteen_textSize"
                         android:layout_margin="10dp"
                         android:gravity="end"
                         />-->
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="1dp"
                    android:background="#546F7A"></View>

            </LinearLayout>


        </ScrollView>

        <Button
            android:id="@+id/btn_contactus_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/App_Orange"
            android:text="OK"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_medium_textSize"
            android:textStyle="bold" />

    </FrameLayout>


</LinearLayout>
